helm/releases/alloy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-ovh
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: alloy.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  number: 8080
  tls:
    - hosts:
        - alloy.ebruno.fr
      secretName: alloy-tls
